Bug 262699 - Print always prints the char column even when otherwise selected
Summary: Print always prints the char column even when otherwise selected
Status: RESOLVED FIXED
Alias: None
Product: okteta
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Friedrich W. H. Kossebau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-09 21:21 UTC by Theofilos Intzoglou
Modified: 2011-01-10 19:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.5.6
Sentry Crash Report:


Attachments
printtool.cpp.diff (735 bytes, patch)
2011-01-09 21:21 UTC, Theofilos Intzoglou
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Theofilos Intzoglou 2011-01-09 21:21:15 UTC
Created attachment 55783 [details]
printtool.cpp.diff

Version:           unspecified (using Devel) 
OS:                Linux

If you select "Values" from View->"Show Values or Chars" and then try to print the document you always get the chars printed.

Reproducible: Always

Steps to Reproduce:
1. Open a file
2. Select "Values" from View->"Show Values or Chars"
3. Go to File->Print and print the document


Actual Results:  
Chars are printed

Expected Results:  
It should print to paper only what you see in the screen

A simple patch for printtool.cpp is provided that fixes this behaviour
Comment 1 Friedrich W. H. Kossebau 2011-01-10 19:31:00 UTC
SVN commit 1213516 by kossebau:

fixed: Print tool always prints the char column even when otherwise selected
Patch by Theofilos Intzoglou, thanks!

BUG:262699
FIXED-IN: 0.5.6


 M  +1 -0      printtool.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1213516
Comment 2 Friedrich W. H. Kossebau 2011-01-10 19:42:22 UTC
SVN commit 1213520 by kossebau:

forward port of #1213516: fixed: Print tool always prints the char column even when otherwise selected

CCBUG:262699


 M  +1 -0      branches/KDE/4.6/kdesdk/okteta/kasten/controllers/view/print/printtool.cpp  
 M  +1 -0      trunk/KDE/kdesdk/okteta/kasten/controllers/view/print/printtool.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1213520