fixed: Print tool always prints the char column even when otherwise selected Patch by Theofilos Intzoglou, thanks!

BUG:262699
FIXED-IN: 0.5.6

svn path=/branches/KDE/4.5/kdeutils/okteta/; revision=1213516